# newz_day

./: README.md  ROADMAP.md  TailwindCli.md  pyproject.toml  tailwind.config.js
app/: main.py
app/core/: auth.py  config.py  duck.py
app/data/: agents.py  models.py
app/db/: metadata.duckdb
app/routes/: hottest.py  latest.py  more.py  summary.py  test.py
app/services/: ingest.py  netstats.py  newz.py
app/templates/: _footer.html  _header.html  _news_card.html  _news_items_fragment.html  _toggle.html  base.html  news.html
data/raw/2025/11/29/: batch_20251129_195448_59edfc20.parquet
data/raw/2025/11/30/: batch_20251130_170207_4808b3bf.parquet  batch_20251209_195457_04a617e2.parquet
scripts/: duck_test.py  news_test.py  seed_test_data.py
