[project]
name = "newz-day"
version = "0.0.3"
description = "Efficient, Propaganda Resistant, News. Daily."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.2",
    "fastapi>=0.121.1",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "ruff>=0.14.4",
    "uvicorn>=0.38.0",
]
